<resources>
    <string name="app_name">WhatsApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Nome">Digite Seu nome</string>
    <string name="botaoCadastrar">Cadastrar</string>
    <string name="botaoLogar">Logar</string>
    <string name="DD">DD</string>
    <string name="telefone">Informe Numero Telefone</string>
    <string name="valida">Validação</string>
    <string name="textoValidacao">você recebeu um SMS para validação de seu número, digite
                                   o codigo de validação abaixo:</string>
    <string name="codigo">Digite o código!</string>
    <string name="botaovalida">VALIDAR</string>
    <string name="Email">Digite Seu Email</string>
    <string name="senha">Digite Sua Senha</string>
    <string name="item_configurações">Configurações</string>
    <string name="item_sair">Sair</string>
    <string name="item_pesquisa">pequisa</string>
    <string name="item_add">Person</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
