<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.Cadastro_usuario">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/usuario"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textAutoCorrect"
        android:id="@+id/id_nomeCadastro"
        android:hint="@string/Nome"
        android:imeOptions="actionNext"
        android:textColor="@color/colorBranco"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:id="@+id/id_EmailCadastro"
        android:hint="@string/Email"
        android:textColor="@color/colorBranco"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_SenhaCadastro"
        android:inputType="textPassword"
        android:hint="@string/senha"
        android:imeOptions="actionGo"
        android:textColor="@color/colorBranco"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_botaoCadastro"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorBranco"
        android:text="@string/botaoCadastrar"/>

</LinearLayout>